--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <!-- header inner -->
          <div class="header">
                      <div class="logo">
-                        <a href="index.html">Green Planet</a>
+                        <a href="index.html">Green<br>Planet</a>
                      </div>
                   </div>
                 
